# CamlWM

./: .envrc  .gitignore  DEVELOPMENT.md  PKGBUILD  README.md  camlwm.desktop  camlwm.opam  dune-project  flake.nix  result
.github/workflows/: aur.yml  ci.yml
.tmp/polybar/: config.ini
docs/plans/: 2026-06-01-critical-bugfixes.md  2026-06-01-ewmh-daily-driver.md
docs/specs/: 2026-06-01-ewmh-daily-driver-design.md
examples/: commands.ml  config.ml
lib/core/: config.ml  config.mli  dune  full.ml  full.mli  geometry.ml  key_binding.ml  key_binding.mli  layout.ml  stack_set.ml  stack_set.mli  tall.ml  tall.mli  wide.ml  wide.mli
lib/wm/: camlwm_wm.ml  dune  wm.ml
lib/xlib/: display.ml  display.mli  dune  event.ml  event.mli  ffi.ml
test/: dune  test_camlwm.ml  test_full.ml  test_fullscreen.ml  test_keybinding.ml  test_layout.ml  test_stack_set.ml  test_tall.ml  test_wide.ml
test/smoke/: lib.sh  run.sh
